@@ -1,3 +1,9 @@
+2003-01-27  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* lib/Foomatic/DB.pm: When parsing the PPD file with the
+	  "ppdtoperl()" fonts, "ImageableArea", "PaperDimension", ...  do
+	  not entwr as options in the Perl data structure any more.
+	
 2003-01-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* foomatic-configure.in, lib/Foomatic/DB.pm, configure.in,
